--- a/source/form.html
+++ b/source/form.html
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Форма</title>
-    <link rel="preload" href="fonts/opensans.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="fonts/opensansbold.woff2" as="font" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <title>Пинк: конкурс</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
+    <script type="text/javascript" src="js/picturefill.min.js" async=""></script>
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
-    <!-- Шапка сайта -->
+    <div style="display: none">
+      <include src="source/img/sprite.svg"></include>
+    </div>
     <div class="bg-container bg-container--header">
       <header class="page-header">
         <div class="page-header__bg-nav-wrapper">
-          <div class="page-header__nav-wrapper">
+          <div class="page-header__nav-wrapper set-width">
             <div class="page-header__panel">
-              <a class="page-header__logo">
-                <img src="№" alt="Логотип сайта">
+              <a class="page-header__logo" href="index.html">
+                <svg class="page-header__logo-image  page-header__logo-image--mobile" width="74" height="23" aria-label="Logo PINK. Main page">
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-white-mobile"></use>
+                </svg>
+                <svg class="page-header__logo-image  page-header__logo-image--tablet" width="146.3" height="40.375" aria-label="Logo PINK. Main page">
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-white-tablet"></use>
+                </svg>
+                <svg class="page-header__logo-image  page-header__logo-image--desktop" width="146.3" height="40.375" aria-label="Logo PINK. Main page">
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-white-desktop"></use>
+                </svg>
               </a>
-
               <button class="page-header__toggle">
-                <span class="visually-hidden">Открыть меню</span>
+                <svg class="page-header__toggle-icon page-header__toggle-icon--burger" width="50" height="24" aria-label="Open menu">
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-menu-burger"></use>
+                </svg>
+                <svg class="page-header__toggle-icon page-header__toggle-icon--cross" width="24" height="24" aria-label="Close menu">
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-menu-cross"></use>
+                </svg>
               </button>
             </div>
-
-            <!-- Основная навигация -->
             <nav class="main-nav main-nav--nojs">
               <ul class="main-nav__list">
-                <li class="main-nav__item main-nav__item--active">
-                  <a>Главная</a>
-                </li>
-
-                <li class="main-nav__item">
-                  <a href="photo.html">Фотографии</a>
-                </li>
-
-                <li class="main-nav__item">
-                  <a href="form.html">Конкурс</a>
-                </li>
-
-                <li class="main-nav__item">
-                  <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-                </li>
+                <li class="main-nav__item"><a href="index.html">Главная</a></li>
+                <li class="main-nav__item"><a href="photo.html">Фотографии</a></li>
+                <li class="main-nav__item main-nav__item--active"><a>Конкурс</a></li>
+                <li class="main-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a></li>
               </ul>
             </nav>
           </div>
@@ -51,193 +51,149 @@
       </header>
     </div>
 
-    <!-- Форма -->
     <main class="page-main set-width">
       <p class="page-main__text page-main__text--form">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!
-        <span class="page-main__text page-main__text--absent-in-mobile">Пожалуйста, заполните форму ниже:</span>
-      </p>
+        <span class="page-main__text page-main__text--absent-in-mobile">Пожалуйста, заполните форму ниже:</span></p>
 
-      <!-- Блок информации о пользователе -->
       <form class="contest set-width" action="https://echo.htmlacademy.ru" method="post">
         <fieldset class="contest__group contest__group--name">
           <legend class="visually-hidden">Представьтесь, пожалуйста</legend>
-
           <ul class="contest__list contest__list--name">
             <li class="contest__item contest__item--name">
               <label for="surname" class="contest__label">Фамилия:</label>
-
               <input type="text" class="contest__field" name="surname" id="surname" placeholder="Укажите фамилию *" required>
             </li>
-
             <li class="contest__item contest__item--name">
               <label for="name" class="contest__label">Имя:</label>
-
               <input type="text" class="contest__field" name="name" id="name" placeholder="Введите ваше имя *" required>
             </li>
-
             <li class="contest__item contest__item--name">
               <label for="patronymic-name" class="contest__label">Отчество:</label>
-
               <input type="text" class="contest__field" name="patronymic-name" id="patronymic-name" placeholder="Ну и отчество тоже">
             </li>
           </ul>
         </fieldset>
-
-        <!-- Блок достижений -->
         <fieldset class="contest__group contest__group--travel contest__group--bg">
-
-          <legend class="contest__description contest__description--travel">
-            <span class="contest__description-text">Ваши безбашенные достижения&nbsp;в&nbsp;путешествии</span>
-          </legend>
-
+          <legend class="contest__description contest__description--travel"><span class="contest__description-text">Ваши безбашенные достижения&nbsp;в&nbsp;путешествии</span></legend>
           <div class="contest__list contest__list--travel">
             <div class="contest__column-wrap">
               <div class="contest__item contest__item--travel">
                 <input class="contest__checkbox visually-hidden" type="checkbox" name="event" id="shark" value="shark" checked>
-
                 <label for="shark" class="contest__label contest__label--checkbox" tabindex="0">Сделал селфи с акулой</label>
               </div>
-
               <div class="contest__item contest__item--travel">
                 <input class="contest__checkbox visually-hidden" type="checkbox" name="event" id="beach" value="beach" checked>
-
                 <label for="beach" class="contest__label contest__label--checkbox" tabindex="0">Обгорел на пляже</label>
               </div>
             </div>
-
             <div class="contest__column-wrap">
               <div class="contest__item contest__item--travel">
                 <input class="contest__checkbox visually-hidden" type="checkbox" name="event" id="Norris" value="Norris">
-
                 <label for="Norris" class="contest__label contest__label--checkbox" tabindex="0">Видел Чака Норриса</label>
               </div>
               <div class="contest__item contest__item--travel">
                 <input class="contest__checkbox visually-hidden" type="checkbox" name="event" id="souvenir" value="souvenir">
-
                 <label for="souvenir" class="contest__label contest__label--checkbox" tabindex="0">Накупил сувениров</label>
               </div>
             </div>
-
             <div class="contest__column-wrap">
               <div class="contest__item contest__item--travel">
                 <input class="contest__checkbox visually-hidden" type="checkbox" name="event" id="tower" value="tower" checked>
-
                 <label for="tower" class="contest__label contest__label--checkbox" tabindex="0">Удержал башню</label>
               </div>
-
               <div class="contest__item contest__item--travel">
                 <input class="contest__checkbox visually-hidden" type="checkbox" name="event" id="hotel" value="hotel" checked>
-
                 <label for="hotel" class="contest__label contest__label--checkbox" tabindex="0">Разгромил отель</label>
               </div>
             </div>
           </div>
         </fieldset>
 
-        <!-- Блок контактов -->
         <fieldset class="contest__group contest__group--contact">
-          <legend class="contest__description contest__description--contact">
-            <span class="contest__description-text">Контактная информация</span>
-          </legend>
-
+          <legend class="contest__description contest__description--contact"><span class="contest__description-text">Контактная информация</span></legend>
           <ul class="contest__list contest__list--contact">
             <li class="contest__item contest__item--contact">
               <label for="telephone" class="contest__label contest__label--contact">Номер телефона</label>
-
               <input type="text" class="contest__field contest__field--telephone" name="telephone" id="telephone" placeholder="Номер, пожалуйста">
             </li>
-
             <li class="contest__item contest__item--contact">
               <label for="email" class="contest__label contest__label--contact">Адрес почты</label>
-
               <input type="email" class="contest__field contest__field--email" name="email" id="email" placeholder="Введите почту *" required>
             </li>
           </ul>
         </fieldset>
 
-        <!-- Блок платформы приложения -->
         <fieldset class="contest__group contest__group--apps contest__group--bg">
-          <legend class="contest__description contest__description--apps">
-            <span class="contest__description-text">С каким приложением путешествовали?</span>
-          </legend>
-
+          <legend class="contest__description contest__description--apps"><span class="contest__description-text">С каким приложением путешествовали?</span></legend>
           <ul class="contest__list contest__list--apps">
             <li class="contest__item contest__item--apps">
               <input class="contest__radio visually-hidden" type="radio" name="app" id="for_iOS" value="for_iOS" checked>
-
               <label for="for_iOS" class="contest__label contest__label--radio" tabindex="0">Pink для iOS</label>
             </li>
-
             <li class="contest__item contest__item--apps">
               <input class="contest__radio visually-hidden" type="radio" name="app" id="for_Android" value="for_Android">
-
               <label for="for_Android" class="contest__label contest__label--radio" tabindex="0">Pink на Android</label>
             </li>
-
             <li class="contest__item contest__item--apps">
               <input class="contest__radio visually-hidden" type="radio" name="app" id="for_Windows" value="for_Windows">
-
               <label for="for_Windows" class="contest__label contest__label--radio" tabindex="0">Windows Phone</label>
             </li>
           </ul>
         </fieldset>
 
-        <!-- Фидбек -->
         <div class="contest__letter-border">
           <label for="fantasy" class="contest__label contest__label--letter">Опишите свои эмоции</label>
-
           <textarea class="contest__letter" name="fantasy" id="fantasy" rows="3" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
         </div>
-
         <div class="contest__submit-wrap">
           <button class="contest__submit" type="submit">Отправить форму</button>
-
-          <p class="contest__note">
-            <span class="contest__note contest__note--violet">*</span> &mdash; обязательные
-
-            <span class="contest__note contest__note--desktop-only">&nbsp;для заполнения&nbsp;</span>поля
-          </p>
+          <p class="contest__note"><span class="contest__note contest__note--violet">*</span> &mdash; обязательные
+            <span class="contest__note contest__note--desktop-only">&nbsp;для заполнения&nbsp;</span>поля</p>
         </div>
       </form>
     </main>
 
-    <!-- Футер -->
-    <footer class="page-footer page-footer--mobile set-width">
-      <a class="page-footer__logo">
-        <img src="#" alt="Логотип сайта">
+    <footer class="page-footer set-width">
+      <a class="page-footer__logo" href="index.html">
+        <svg class="page-footer__logo-image  page-footer__logo-image--mobile" width="146.3" height="40.375" aria-label="Logo PINK. Main page">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-blue-mobile"></use>
+        </svg>
+        <svg class="page-footer__logo-image  page-footer__logo-image--desktop" width="146.3" height="40.375" aria-label="Logo PINK. Main page">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-blue-desktop"></use>
+        </svg>
       </a>
-
       <section class="page-footer__social social">
         <h2 class="visually-hidden">Ссылки на социальные сети</h2>
-
         <a class="social__btn" href="#">
-          <img src="#" alt="Твитер">
+          <svg class="social__img social__img--tw" width="17.5px" height="14.663" aria-label="Twitter">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter"></use>
+          </svg>
         </a>
-
         <a class="social__btn" href="#">
-          <img src="#" alt="Фейсбук">
+          <svg class="social__img social__img--fb" width="8.673px" height="18.944" aria-label="Facebook">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-facebook"></use>
+          </svg>
         </a>
-
         <a class="social__btn" href="#">
-          <img src="#" alt="Ютуб">
+          <svg class="social__img social__img--yt" width="14.64px" height="13.96" aria-label="You-tybe">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-youtube"></use>
+          </svg>
         </a>
       </section>
-
       <a class="page-footer__copyright copyright" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="copyright__text">Разработано</span>
-
-        <img src="#" alt="Логотип академии">
+        <svg class="copyright__img" width="27" height="34" aria-label="HTML Academy">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy"></use>
+        </svg>
       </a>
     </footer>
 
-    <!-- Оверлеи для валидации -->
+    <!--  Для отображения окон добавить класс fixed-overlay-open с двумя дефисами во втором случае !-->
     <div class="fixed-overlay">
       <div class="modal">
         <div class="modal__message">
           <h3 class="modal__title">Что-то пошло не так!</h3>
-
           <p class="modal__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-
           <div class="modal__wrapper">
             <button class="modal__close" type="button">ok</button>
           </div>
@@ -249,14 +205,15 @@
       <div class="modal">
         <div class="modal__message modal__message--success">
           <h3 class="modal__title">Ваша заявка отправлена</h3>
-
           <p class="modal__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим&nbsp;вас.</p>
-
           <div class="modal__wrapper modal__wrapper--background">
             <button class="modal__close" type="button">Закрыть окно</button>
           </div>
         </div>
       </div>
     </div>
+
+    <script src="js/popup.min.js"></script>
+
   </body>
 </html>
